--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="box" style="width: 400px; height: 40vh; border: 1px solid black; padding: 10px; background-color: antiquewhite;">
         <p>Hello</p><br>
         <p>My Name is</p>
+        <img src="/Image/dfbgntg-7d542502-4c8e-4cab-98ff-d4e835f30a56.gif" width="100" alt="">
     </div>
     
 
